--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,32 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": [
+    "next/core-web-vitals",
+    "@rocketseat/eslint-config/react",
+    "prettier"
+  ],
+  "plugins": [
+    "unused-imports"
+  ],
+  "rules": {
+    "no-html-link-for-pages": "off",
+    "unused-imports/no-unused-imports": "error",
+    "unused-imports/no-unused-vars": [
+      "warn",
+      {
+        "vars": "all",
+        "varsIgnorePattern": "^_",
+        "args": "after-used",
+        "argsIgnorePattern": "^_"
+      }
+    ],
+    "import/order": ["error", {
+        "groups": [
+          "builtin",
+          "external",
+          "internal"
+        ],
+        "newlines-between": "always-and-inside-groups"
+      }
+    ]
+  }
 }
